--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
