--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "start-watch": "nodemon src/index.js"
+    "start": "node build/index.js",
+    "compile": "tsc && node build/index.js",
+    "dev": "nodemon -e ts  --exec \"npm run compile\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
+    "@types/mysql": "^2.15.7",
+    "@types/socket.io": "^2.1.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -19,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.2.0",
+    "typescript": "^3.6.2",
     "util": "^0.12.1"
   },
   "devDependencies": {
