--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.2.0",
+    "ts-node": "^8.3.0",
     "typescript": "^3.6.2",
     "util": "^0.12.1"
   },
